--- a/fintrack/index.html
+++ b/fintrack/index.html
@@ -4,6 +4,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fintrack</title>
+    <meta name="description" content="Fintrack — Gestor de gastos elegante y simple" />
+    <!-- Tipografía variable moderna -->
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
+    <link rel="icon" href="/src/assets/logo.svg" />
   </head>
   <body>
     <div id="root"></div>
